istio/authz/manager/authorization-allow.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: come2us-manager-access-allow
  namespace: come2us
spec:
  action: ALLOW
  rules:
    - when:
        - key: request.auth.claims[authority]
          values: ["MANAGER"]
